--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "seainfo6150-final-project",
+  "name": "finalproject",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "antd": "^3.26.15",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-flexbox-grid": "^2.1.2",
+    "react-responsive-picture": "^3.2.2",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.4.1",
+    "react-validator-ease": "0.0.9",
+    "schema-typed": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.9.8",
+    "react-form-next": "^3.0.6"
   }
 }
